@@ -5,6 +5,8 @@ Version 5.28, unreleased, urgency: LOW
   - Build matrix (.travis.yml) extended with ./configure options.
 * Bugfixes
   - Fixed UCONTEXT threading on OSX.
+  - Fixed exit codes for information requests (as
+    in "stunnel -version" or "stunnel -help").
 
 Version 5.27, 2015.12.03, urgency: MEDIUM
 * Security bugfixes
